# bilbycast-appear-x-api-gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: nightly-release.yml
Appear-X-Platform-API/: APPEARTV-ROOT-MIB.mib  APPEARTV-X-PLATFORM-MIB.mib  Xger.2.58.txt  ipGateway.1.57.txt  mmi.5.6.txt  pcie-aer-fix-notes.md  timex.1.1.txt
config/: example.toml  probe-x5.toml
docs/: adding-new-device-gateways.md  architecture.md  setup-guide.md
packaging/: bilbycast-appear-x-gateway.service  bilbycast-appear-x-gateway.sysusers  install-appear-x-gateway.sh  uninstall-appear-x-gateway.sh
src/: config.rs  credentials.rs  event_gate.rs  main.rs  upgrade_profile.rs
src/appear_x/: capabilities.rs  commands.rs  jsonrpc.rs  mod.rs  polling.rs  probe_registry.rs  reachability.rs  state.rs
src/ws/: client.rs  event_gate.rs  message.rs  mod.rs  tls.rs
