[package]
name = "bilbycast-appear-x-api-gateway"
version = "0.2.0"
edition = "2021"
description = "API gateway bridging Appear X platform JSON-RPC API to bilbycast-manager WebSocket protocol"
license = "Elastic-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23"
webpki-roots = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
toml = "1.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
ring-compat = { version = "0.8", optional = true }
