[package]
name = "bilbycast-appear-x-api-gateway"
version = "0.2.0"
edition = "2024"
description = "API gateway bridging Appear X platform JSON-RPC API to bilbycast-manager WebSocket protocol"
license = "Elastic-2.0"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23.37"
webpki-roots = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
toml = "1.1.2+spec-1.1.0"
clap = { version = "4.6.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v4"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
tokio-util = { version = "0.7.18", features = ["rt"] }
futures-util = "0.3.32"
ring-compat = { version = "0.8.0", optional = true }
